--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,10 @@ footer {
   text-align: center;
   margin-bottom: 0px;
 }
+
+a:hover {
+  cursor: pointer;
+  display: inline-block;
+  padding-top: 10px;
+  background-color: rgb(102, 146, 241);
+}
